[package]
name = "ble-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "ble_bridge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bluez-async = "0.6"
uuid = "1.2"
futures = "0.3"
rand = "0.8"
#pretty_env_logger = "0.4"
tokio = { version = "1.22", features = ["macros", "rt", "rt-multi-thread"] }
#serde_json = "1.0"
switchbot = { path = "../switchbot_rs", version = "*" }

[build-dependencies]
cbindgen = "0.20"

[profile.release]
rpath = true
